# StarChat

server/: .gitignore
server/GateServer/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  config.ini  const.h  main.cpp
server/GateServer/asio/: AsioIOContextPool.cpp  AsioIOContextPool.h
server/GateServer/core/: CServer.cpp  CServer.h  HttpConnection.cpp  HttpConnection.h  LogicSystem.cpp  LogicSystem.h
server/GateServer/mysql/: ConnectionGuard.cpp  ConnectionGuard.h  MysqlConnection.h  MysqlConnectionPool.cpp  MysqlConnectionPool.h  MysqlDao.cpp  MysqlDao.h  MysqlManager.cpp  MysqlManager.h  UserInfo.h
server/GateServer/protobuf/: message.grpc.pb.cc  message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
server/GateServer/redis/: RedisConnectionPool.cpp  RedisConnectionPool.h  RedisManager.cpp  RedisManager.h
server/GateServer/rpc/: RpcConnectionPool.h  RpcConnectionPool.tpp  StatusGrpcClient.cpp  StatusGrpcClient.h  VerifyGrpcClient.cpp  VerifyGrpcClient.h
server/GateServer/utils/: ConfigManager.cpp  ConfigManager.h  Singleton.h  defer.h
